# voice-and-text-2507

./: .gitignore  README.md
client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/src/: App.tsx  SimpleVoiceUI.tsx  index.css  main.tsx  theme.css
client/src/components/: Button.tsx  ControlBar.tsx  ControlsArea.tsx  Corner.tsx  EventsPanel.tsx  Header.tsx  MessagesPanel.tsx  Panel.tsx  ResizablePanels.tsx  Select.tsx  TerminalDropdown.tsx  index.ts
client/src/styles/: terminal.css
server/: bot.py  env.example  pyproject.toml  run.py
