# [tool.uv]
# override-dependencies = ["numba==0.61.2"]


[project]
name = "bot_tinkering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "loguru",
    "pipecat-ai[cartesia,daily,speechmatics,openai,silero,webrtc,local-smart-turn]>=0.0.77",
    "pydantic",
    "python-dotenv",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "uvicorn[standard]",
    "websockets",
    "pipecatcloud",
    "pipecat-ai-small-webrtc-prebuilt"
]
